# ToyC_Compiler

./: .gitignore  READEME.md  README.md  dune-project  toyc_compiler.opam
lib/: ast.ml  codegen.ml  dune  env.ml  lexer.mll  parser.mly  semantic.ml  symbol.ml
test/: dune  lexer_test.ml  parser_test.ml  test_toyc_compiler.ml
tests/: return_42.expected
tests/lexer/: basic_tokens.expected  basic_tokens.tc  comment_test.expected  comment_test.tc  identifiers_test.expected  identifiers_test.tc  operations_test.expected  operations_test.tc  process_data.expected  process_data.tc
tests/parser/: func_calls.tc  nested_if_else.expected  operation_test.expected  operation_test.tc  while_with_if.tc
